CppEditor: Check document before access

Amends f99e17efa4118ead537f69aa659a78241dd0488f.

Fixes: QTCREATORBUG-28197
Change-Id: I7a3561b5ff5b7635f419f1252595c639fe7254bf
Reviewed-by: Christian Stenger <christian.stenger@qt.io>